# rastless-benchmarks

./: .gitignore  README.md  example.env  pyproject.toml
analysis/: utils.py
analysis/notebooks/: visualization.ipynb
benchmark_results/rasdaman/: analysis_point_stats.csv  analysis_point_stats_history.csv  analysis_polygon_stats.csv  analysis_polygon_stats_history.csv  visualization_stats.csv  visualization_stats_history.csv
benchmark_results/rasdaman_local/: analysis_point_failures.csv  analysis_point_stats.csv  analysis_point_stats_history.csv  analysis_polygon_failures.csv  analysis_polygon_stats.csv  analysis_polygon_stats_history.csv  visualization_stats.csv  visualization_stats_history.csv
benchmark_results/rastless/: visualization_stats.csv  visualization_stats_history.csv
benchmarks/: main.py  rasdaman_locust.py  rastless_locust.py  run_analysis-point.py  run_analysis-polygon.py  run_visualization.py  settings.py  try.py
benchmarks/analysis/: Calculation_Costs.ipynb  Calculation_Costs_Analysis_Polygon.ipynb  Calculation_Costs_Visualization.ipynb  point-analysis.ipynb  point_analysis.ipynb  polygon-analysis.ipynb  tools.py  visualization-constant.ipynb  visualization-specific-date.ipynb  visualization.ipynb
benchmarks/analysis/.ipynb_checkpoints/: Calculation_Costs_Analysis_Polygon-checkpoint.ipynb  Calculation_Costs_Visualization-checkpoint.ipynb  (+5 more)
benchmarks/utils/: auth.py  geo.py  tools.py
data/: banja_dam.geojson  rasdaman_layer_dates.json  rastless_layer_dates.json  utils.py
tests/utils/: test_geo.py  test_tools.py
(+240 files in other folders)
